--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.css
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.css
@@ -3,10 +3,52 @@
   width: var(--standard-field-width);
 }
 
-.content-form {
-  margin-top: 20px;
-}
-
 .content-form label {
   padding-right: 15px;
+}
+
+.thing-in-table {
+  width: 100%;
+}
+
+.thing-in-table td.hide-on-mobile {
+  width: 5%;
+}
+
+.type-col {
+  width: 100%;
+  text-align: center;
+}
+
+.drop-area {
+  padding: 10px;
+  border: 5px solid transparent;
+  text-align: center;
+}
+
+.drop-area .text-label {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.drop-area p-button {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.drop-highlight {
+  border: 5px inset var(--primary-color);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.type-col p-checkbox {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+@media (max-width: 850px) { /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
+  .type-col p-checkbox {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
